# teach-me

./: .env.sample  .gitignore  LICENSE  Makefile  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml
docs/: tasks.md
infrastructure/: README.md  app.py  cdk.json  config.json
infrastructure/infrastructure/: __init__.py  infrastructure_stack.py
infrastructure/policies/: dev.json
scripts/: test.py
src/lambda/: index.py  main.py
src/models/: __init__.py  download_script.py  huggingface_downloader.py  models_config.yaml
src/serverless/: index.py  main.py
src/teach_me/api/: main.py
src/teach_me/api/models/: job.py
src/teach_me/config/: database.py  sqlalchemy_db.py
src/teach_me/dao/: __init__.py  job_dao.py
src/teach_me/dao/alchemy/: generic_dao.py
src/teach_me/dao/models/: job.py
src/teach_me/models/: job.py
src/teach_me/models/request/: job.py
src/teach_me/schemas/: __init__.py  job.py
src/teach_me/services/: base_service.py  job_service.py
src/teach_me/services/models/: __init__.py  job.py
src/teach_me/utils/: logging.py
tests/: conftest.py
tests/integration/: test_database_integration.py
tests/models/: test_huggingface_downloader.py
tests/serverless/: test_main.py
tests/teach_me/: __init__.py
tests/teach_me/api/: test_main.py
tests/teach_me/config/: test_database.py  test_sqlalchemy_db.py
tests/teach_me/dao/: __init__.py  test_job_dao.py
tests/teach_me/dao/alchemy/: test_generic_dao.py
tests/teach_me/models/: test_job.py
tests/teach_me/schemas/: __init__.py  test_job.py
tests/teach_me/services/: test_base_service.py  test_job_service.py
tests/teach_me/utils/: test_logging.py
