[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teach-me"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "supabase",
    "pydantic-settings",
    "python-dotenv",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "httpx",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "awscli==1.41.11",
    "aws-cdk-lib==2.206.0",
    "constructs==10.4.2",
    "boto3==1.39.11",
    "huggingface_hub",
    "pyyaml",
    "mangum==0.19.0",
    "transformers[torch]",
    "torch",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.4",
    "mypy==1.17.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock",
    "types-PyYAML==6.0.12.20250516",
    "types-requests==2.32.4.20250611",
    "types-simplejson==3.20.0.20250326",
    "types-tensorflow==2.18.0.20250516",
    "types-tqdm==4.67.0.20250516",
    "transformers[torch]",
    "torch",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]